Bug 482938. nsPipe should create and destroy monitors using nsAutoMonitor so the potential-deadlock detector doesn't get confused. r=bsmedberg